<resources>
    <string name="app_name">MovieTV</string>
    <string name="title_activity_detail_film">Detail Film</string>
    <string name="title">Title</string>
    <string name="yeartext">Year Text</string>
    <string name="yearlabel">Year:</string>
    <string name="durationtext">Duration Text</string>
    <string name="durationlabel">Duration:</string>
    <string name="overviewtext">Overview Text</string>
    <string name="overviewlabel">Overview:</string>
    <string name="movies">Movies</string>
    <string name="tvshows">TV Shows</string>
    <string name="favorites">Favorites</string>
    <string name="fav_movies">Favorite Movies</string>
    <string name="fav_tvshows">Favorite TV Shows</string>
    <string name="copyright">Image designed by catalyststuff / Freepik</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_favorite">menu favorite</string>
    <string name="message_ok">OK</string>
    <string name="message_undo">UNDO</string>
</resources>